Add OvirtProxy class
This class is used to access the oVirt manager through its REST API
and get the URL and credentials to use to access the corresponding VM
using SPICE.

--- a/govirt/Makefile.am
+++ b/govirt/Makefile.am
@@ -15,12 +15,14 @@ lib_LTLIBRARIES =						\
 libgovirt_ladir = $(includedir)/govirt-1/govirt
 libgovirt_la_HEADERS =						\
 	govirt.h						\
+	ovirt-proxy.h						\
 	ovirt-rest-call.h					\
 	ovirt-vm.h						\
 	ovirt-vm-display.h					\
 	$(NULL)
 
 libgovirt_la_SOURCES =						\
+	ovirt-proxy.c						\
 	ovirt-rest-call.c					\
 	ovirt-vm.c						\
 	ovirt-vm-display.c					\
