--- a/configure.ac
+++ b/configure.ac
@@ -94,6 +94,10 @@ dnl - Check library dependencies
 dnl ---------------------------------------------------------------------------
 PKG_CHECK_MODULES([GLIB], [gobject-2.0])
 
+# Setup GLIB_MKENUMS to use glib-mkenums even if GLib is uninstalled.
+GLIB_MKENUMS=`$PKG_CONFIG --variable=glib_mkenums glib-2.0`
+AC_SUBST(GLIB_MKENUMS)
+
 dnl **** Check for librest ****
 PKG_CHECK_MODULES([REST], [rest-0.7 >= 0.7.13])
 
