--- a/govirt/Makefile.am
+++ b/govirt/Makefile.am
@@ -81,4 +81,33 @@ CLEANFILES = $(BUILT_SOURCES)
 clean-local:
 	rm -f *~
 
+-include $(INTROSPECTION_MAKEFILE)
+INTROSPECTION_GIRS =
+INTROSPECTION_SCANNER_ARGS =					\
+	--add-include-path=$(srcdir)				\
+	--identifier-prefix=Ovirt				\
+	--warn-all						\
+	--c-include="govirt/govirt.h"				\
+	$(NULL)
+INTROSPECTION_COMPILER_ARGS = --includedir=$(srcdir)
+
+if HAVE_INTROSPECTION
+introspection_sources = $(libgovirt_la_SOURCES) $(libgovirt_la_HEADERS) $(BUILT_SOURCES)
+
+GoVirt-1.0.gir: libgovirt.la Makefile
+GoVirt_1_0_gir_INCLUDES = GObject-2.0 Rest-0.7
+GoVirt_1_0_gir_CFLAGS = $(INCLUDES)
+GoVirt_1_0_gir_LIBS = libgovirt.la
+GoVirt_1_0_gir_FILES = $(introspection_sources)
+INTROSPECTION_GIRS += GoVirt-1.0.gir
+
+girdir = $(datadir)/gir-1.0
+gir_DATA = $(INTROSPECTION_GIRS)
+
+typelibdir = $(libdir)/girepository-1.0
+typelib_DATA = $(INTROSPECTION_GIRS:.gir=.typelib)
+
+CLEANFILES += $(gir_DATA) $(typelib_DATA)
+endif # HAVE_INTROSPECTION
+
 -include $(top_srcdir)/git.mk
