--- a/govirt/Makefile.am
+++ b/govirt/Makefile.am
@@ -95,7 +95,7 @@ if HAVE_INTROSPECTION
 introspection_sources = $(libgovirt_la_SOURCES) $(libgovirt_la_HEADERS) $(BUILT_SOURCES)
 
 GoVirt-1.0.gir: libgovirt.la Makefile
-GoVirt_1_0_gir_INCLUDES = GObject-2.0 Rest-0.7
+GoVirt_1_0_gir_INCLUDES = Gio-2.0 GObject-2.0 Rest-0.7
 GoVirt_1_0_gir_CFLAGS = $(INCLUDES)
 GoVirt_1_0_gir_LIBS = libgovirt.la
 GoVirt_1_0_gir_FILES = $(introspection_sources)
