--- a/govirt/govirt.pc.in
+++ b/govirt/govirt.pc.in
@@ -6,6 +6,6 @@ includedir=@includedir@
 Name: govirt
 Description: goVirt is a GLib binding for oVirt REST API
 Version: @VERSION@
-Requires: glib-2.0, gobject-2.0, rest-0.7
+Requires: gio-2.0, glib-2.0, gobject-2.0, rest-0.7
 Libs: -L${libdir} -lgovirt
 Cflags: -I${includedir}/govirt-1
