Move vm actions from OvirtProxy to OvirtVm
They make more sense there.

--- a/govirt/Makefile.am
+++ b/govirt/Makefile.am
@@ -17,6 +17,7 @@ libgovirt_la_HEADERS =						\
 	govirt.h						\
 	ovirt-proxy.h						\
 	ovirt-rest-call.h					\
+	ovirt-types.h						\
 	ovirt-vm.h						\
 	ovirt-vm-display.h					\
 	$(NULL)
