Fix make distcheck

--- a/govirt/Makefile.am
+++ b/govirt/Makefile.am
@@ -23,6 +23,7 @@ libgovirt_la_HEADERS =						\
 	$(NULL)
 
 noinst_HEADERS =						\
+	govirt-private.h					\
 	ovirt-rest-call.h					\
 	ovirt-vm-private.h					\
 	$(NULL)
@@ -87,7 +88,6 @@ BUILT_SOURCES =							\
 	$(NULL)
 
 EXTRA_DIST =							\
-	govirt-version.h.in					\
 	govirt.pc.in						\
 	govirt.sym						\
 	ovirt-enum-types.h.template				\
@@ -116,7 +116,7 @@ introspection_sources = $(libgovirt_la_SOURCES) $(libgovirt_la_HEADERS) $(buildd
 
 GoVirt-1.0.gir: libgovirt.la Makefile
 GoVirt_1_0_gir_INCLUDES = Gio-2.0 GObject-2.0 Rest-0.7
-GoVirt_1_0_gir_CFLAGS = $(INCLUDES)
+GoVirt_1_0_gir_CFLAGS = $(INCLUDES) -I$(top_builddir)
 GoVirt_1_0_gir_LIBS = libgovirt.la
 GoVirt_1_0_gir_FILES = $(introspection_sources)
 INTROSPECTION_GIRS += GoVirt-1.0.gir
