Rename xml_to_vm to ovirt_vm_refresh_from_xml and export it
This will be useful in subsequent commits. It's also moved to a
separate file.

--- a/govirt/Makefile.am
+++ b/govirt/Makefile.am
@@ -33,6 +33,7 @@ libgovirt_la_SOURCES =						\
 	ovirt-rest-call.c					\
 	ovirt-vm.c						\
 	ovirt-vm-display.c					\
+	ovirt-vm-xml.c						\
 	$(NULL)
 
 nodist_libgovirt_la_HEADERS =					\
