build-sys: Use AM_CPPFLAGS instead of INCLUDES
The latter is obsolete nowadays and automake warns when it's used

--- a/govirt/Makefile.am
+++ b/govirt/Makefile.am
@@ -1,6 +1,6 @@
 NULL =
 
-INCLUDES = \
+AM_CPPFLAGS = \
 	$(GLIB_CFLAGS)						\
 	$(REST_CFLAGS)						\
 	-I$(top_srcdir)						\
@@ -117,7 +117,7 @@ introspection_sources = $(libgovirt_la_SOURCES) $(libgovirt_la_HEADERS) $(buildd
 
 GoVirt-1.0.gir: libgovirt.la Makefile
 GoVirt_1_0_gir_INCLUDES = Gio-2.0 GObject-2.0 Rest-0.7
-GoVirt_1_0_gir_CFLAGS = $(INCLUDES) -I$(top_builddir)
+GoVirt_1_0_gir_CFLAGS = $(AM_CPPFLAGS) -I$(top_builddir)
 GoVirt_1_0_gir_LIBS = libgovirt.la
 GoVirt_1_0_gir_FILES = $(introspection_sources)
 INTROSPECTION_GIRS += GoVirt-1.0.gir
