--- a/govirt/Makefile.am
+++ b/govirt/Makefile.am
@@ -15,6 +15,7 @@ lib_LTLIBRARIES =						\
 libgovirt_ladir = $(includedir)/govirt-1.0/govirt
 libgovirt_la_HEADERS =						\
 	govirt.h						\
+	ovirt-collection.h					\
 	ovirt-error.h						\
 	ovirt-proxy.h						\
 	ovirt-resource.h					\
@@ -36,6 +37,7 @@ noinst_HEADERS =						\
 
 libgovirt_la_SOURCES =						\
 	glib-compat.c						\
+	ovirt-collection.c					\
 	ovirt-error.c						\
 	ovirt-proxy.c						\
 	ovirt-resource.c					\
