Add example program for async code

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -1,4 +1,4 @@
-noinst_PROGRAMS = sync-test
+noinst_PROGRAMS = async-test sync-test
 
 EXTRA_DIST =
 
@@ -10,6 +10,18 @@ sync_test_CFLAGS = \
 sync_test_SOURCES = \
 		sync-test.c
 sync_test_LDADD = \
+		../govirt/libgovirt.la \
+		$(GLIB_LIBS) \
+		$(REST_LIBS)
+
+async_test_CFLAGS = \
+		$(WARNINGFLAGS_C) \
+		$(GLIB_CFLAGS) \
+		$(REST_CFLAGS) \
+		-I$(top_srcdir)
+async_test_SOURCES = \
+		async-test.c
+async_test_LDADD = \
 		../govirt/libgovirt.la \
 		$(GLIB_LIBS) \
 		$(REST_LIBS)
