Move action parsing from OvirtVm to OvirtResource
Most resources can have associated actions, so it makes sense to
make this code generic.

--- a/govirt/Makefile.am
+++ b/govirt/Makefile.am
@@ -27,6 +27,8 @@ libgovirt_la_HEADERS =						\
 noinst_HEADERS =						\
 	glib-compat.h						\
 	govirt-private.h					\
+	ovirt-proxy-private.h					\
+	ovirt-resource-private.h				\
 	ovirt-rest-call.h					\
 	ovirt-utils.h						\
 	ovirt-vm-private.h					\
