Add doap file for use by GNOME infrastructure

--- a/Makefile.am
+++ b/Makefile.am
@@ -12,7 +12,8 @@ EXTRA_DIST =						\
 	README						\
 	NEWS						\
 	autogen.sh					\
-	config.h
+	config.h					\
+	libgovirt.doap
 
 MAINTAINERCLEANFILES =					\
 	ChangeLog					\
