Add OvirtApi class
This will be the toplevel object to get access to the REST API

--- a/govirt/Makefile.am
+++ b/govirt/Makefile.am
@@ -15,6 +15,7 @@ lib_LTLIBRARIES =						\
 libgovirt_ladir = $(includedir)/govirt-1.0/govirt
 libgovirt_la_HEADERS =						\
 	govirt.h						\
+	ovirt-api.h						\
 	ovirt-collection.h					\
 	ovirt-error.h						\
 	ovirt-proxy.h						\
@@ -28,6 +29,7 @@ libgovirt_la_HEADERS =						\
 noinst_HEADERS =						\
 	glib-compat.h						\
 	govirt-private.h					\
+	ovirt-api-private.h					\
 	ovirt-collection-private.h				\
 	ovirt-proxy-private.h					\
 	ovirt-resource-private.h				\
@@ -38,6 +40,7 @@ noinst_HEADERS =						\
 
 libgovirt_la_SOURCES =						\
 	glib-compat.c						\
+	ovirt-api.c						\
 	ovirt-collection.c					\
 	ovirt-error.c						\
 	ovirt-proxy.c						\
