Add OvirtResourceRestCall class
This is needed to generate the body of the XML REST call when
we want to update an existing resource as this is quite different
from how we generate the body content for actions.

--- a/govirt/Makefile.am
+++ b/govirt/Makefile.am
@@ -36,6 +36,7 @@ noinst_HEADERS =						\
 	ovirt-proxy-private.h					\
 	ovirt-resource-private.h				\
 	ovirt-rest-call.h					\
+	ovirt-resource-rest-call.h				\
 	ovirt-storage-domain-private.h				\
 	ovirt-utils.h						\
 	ovirt-vm-private.h					\
@@ -51,6 +52,7 @@ libgovirt_la_SOURCES =						\
 	ovirt-proxy-deprecated.c				\
 	ovirt-resource.c					\
 	ovirt-rest-call.c					\
+	ovirt-resource-rest-call.c				\
 	ovirt-storage-domain.c					\
 	ovirt-utils.c						\
 	ovirt-vm.c						\
