Add ovirt_get_option_group() API
This allows applications to easily add support for command line
options libgovirt knows about. For now, it's only --ovirt-ca-file
which specifies the root CA certificate libgovirt should trust during
https REST sessions. If it's not specified, the system CA cert store
will be used.

--- a/govirt/Makefile.am
+++ b/govirt/Makefile.am
@@ -19,6 +19,7 @@ libgovirt_la_HEADERS =						\
 	ovirt-cdrom.h						\
 	ovirt-collection.h					\
 	ovirt-error.h						\
+	ovirt-options.h						\
 	ovirt-proxy.h						\
 	ovirt-resource.h					\
 	ovirt-rest-call-error.h					\
@@ -50,6 +51,7 @@ libgovirt_la_SOURCES =						\
 	ovirt-cdrom.c						\
 	ovirt-collection.c					\
 	ovirt-error.c						\
+	ovirt-options.c						\
 	ovirt-proxy.c						\
 	ovirt-proxy-deprecated.c				\
 	ovirt-resource.c					\
