Add sample code which lists VMs/VM pools
There are both sync and async tests showing how to get a list of VMs/VM
pools from an oVirt instance.

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -1,4 +1,4 @@
-noinst_PROGRAMS = async-test sync-test
+noinst_PROGRAMS = async-test sync-test list-vms list-vms-async
 
 EXTRA_DIST =
 
@@ -22,6 +22,30 @@ async_test_CFLAGS = \
 async_test_SOURCES = \
 		async-test.c
 async_test_LDADD = \
+		../govirt/libgovirt.la \
+		$(GLIB_LIBS) \
+		$(REST_LIBS)
+
+list_vms_CFLAGS = \
+		$(WARNINGFLAGS_C) \
+		$(GLIB_CFLAGS) \
+		$(REST_CFLAGS) \
+		-I$(top_srcdir)
+list_vms_SOURCES = \
+		list-vms.c
+list_vms_LDADD = \
+		../govirt/libgovirt.la \
+		$(GLIB_LIBS) \
+		$(REST_LIBS)
+
+list_vms_async_CFLAGS = \
+		$(WARNINGFLAGS_C) \
+		$(GLIB_CFLAGS) \
+		$(REST_CFLAGS) \
+		-I$(top_srcdir)
+list_vms_async_SOURCES = \
+		list-vms-async.c
+list_vms_async_LDADD = \
 		../govirt/libgovirt.la \
 		$(GLIB_LIBS) \
 		$(REST_LIBS)
