--- a/configure.ac
+++ b/configure.ac
@@ -52,7 +52,8 @@ LT_PREREQ([2.2])
 LT_INIT
 
 # i18 support
-IT_PROG_INTLTOOL(0.40.0)
+AM_GNU_GETTEXT_VERSION([0.19.4])
+AM_GNU_GETTEXT([external])
 
 GETTEXT_PACKAGE=AC_PACKAGE_NAME
 AC_SUBST(GETTEXT_PACKAGE)
