Add initial support for building with meson
Based on initial work by Christophe Fergeau <cfergeau@redhat.com>

Signed-off-by: Eduardo Lima (Etrunko) <etrunko@redhat.com>

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -1,6 +1,6 @@
 noinst_PROGRAMS = async-test sync-test list-vms list-vms-async
 
-EXTRA_DIST =
+EXTRA_DIST = meson.build
 
 sync_test_CFLAGS = \
 		$(WARNINGFLAGS_C) \
