Add Support for building with meson
Based on initial work by Christophe Fergeau <cfergeau@redhat.com>

Signed-off-by: Eduardo Lima (Etrunko) <etrunko@redhat.com>

--- a/govirt/Makefile.am
+++ b/govirt/Makefile.am
@@ -129,6 +129,7 @@ BUILT_SOURCES =							\
 	$(NULL)
 
 EXTRA_DIST =							\
+	meson.build						\
 	govirt-1.0.pc.in					\
 	govirt.sym						\
 	ovirt-enum-types.h.template				\
