--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -28,3 +28,5 @@ noinst_LTLIBRARIES = libmock-httpd.la
 libmock_httpd_la_SOURCES = mock-httpd.c mock-httpd.h
 
 test_govirt_LDADD = $(AM_LDFLAGS) libmock-httpd.la
+
+-include $(top_srcdir)/git.mk
