Initial support for Disks
Signed-off-by: Eduardo Lima (Etrunko) <etrunko@redhat.com>

--- a/govirt/meson.build
+++ b/govirt/meson.build
@@ -7,6 +7,7 @@ govirt_headers = [
   'ovirt-cluster.h',
   'ovirt-collection.h',
   'ovirt-data-center.h',
+  'ovirt-disk.h',
   'ovirt-error.h',
   'ovirt-host.h',
   'ovirt-options.h',
@@ -34,6 +35,7 @@ govirt_private_headers = [
   'ovirt-cluster-private.h',
   'ovirt-collection-private.h',
   'ovirt-data-center-private.h',
+  'ovirt-disk-private.h',
   'ovirt-host-private.h',
   'ovirt-proxy-private.h',
   'ovirt-resource-private.h',
@@ -58,6 +60,7 @@ govirt_sources = [
   'ovirt-cluster.c',
   'ovirt-collection.c',
   'ovirt-data-center.c',
+  'ovirt-disk.c',
   'ovirt-error.c',
   'ovirt-host.c',
   'ovirt-options.c',
