meson: Synchronize Requires in .pc file with Autotools
Without this, they will just be listed in Requires.private.

Also do not add gobject-introspection to the dependencies,
since it is only used for generating introspection
and Meson will check for it automatically.

--- a/govirt/meson.build
+++ b/govirt/meson.build
@@ -129,5 +129,10 @@ pkgconfig.generate(govirt_lib,
                    filebase : 'govirt-1.0',
                    description : 'goVirt is a GLib binding for oVirt REST API',
                    subdirs : 'govirt-1.0',
+                   requires : [
+                       gobject_dep,
+                       gio_dep,
+                       rest_dep,
+                   ],
                    variables : 'exec_prefix=${prefix}')
 
