meson: fix error
govirt/meson.build:49:0: ERROR: gnome.mkenums_simple got unknown keyword arguments "install"

Signed-off-by: Marc-André Lureau <marcandre.lureau@redhat.com>

--- a/govirt/meson.build
+++ b/govirt/meson.build
@@ -47,8 +47,7 @@ govirt_private_headers = [
 ]
 
 govirt_enum_types_private = gnome.mkenums_simple('ovirt-enum-types-private',
-                                                 sources : govirt_private_headers,
-                                                 install : false)
+                                                 sources : govirt_private_headers)
 
 #
 # libgovirt.so
