--- a/meson.build
+++ b/meson.build
@@ -61,9 +61,9 @@ govirt_global_cflags = ['-std=c99',
                         '-Wextra',
                         '-Werror',
                         '-Wcast-align',
+                        '-Wno-error=cast-align',
                         '-Wmissing-declarations',
                         '-Wpointer-arith',
-                        '-Wcast-align',
                         '-Wwrite-strings',
                         '-Winit-self',
                         '-Wreturn-type',
