tests: Workaround libproxy bug
https://github.com/libproxy/libproxy/issues/260
https://github.com/gentoo/gentoo/commit/7a49e97ae0a06dd1c6f9cc798794f6f432174bf6

Signed-off-by: Eduardo Lima (Etrunko) <eblima@gmail.com>

--- a/tests/meson.build
+++ b/tests/meson.build
@@ -9,4 +9,4 @@ test_govirt = executable('test-govirt', test_govirt_sources,
                          dependencies: govirt_lib_dep,
                          c_args : test_c_args)
 
-test('test-govirt', test_govirt)
+test('test-govirt', test_govirt, env : ['GIO_USE_NETWORK_MONITOR=base'])
