--- a/.gitlab-ci/Dockerfile
+++ b/.gitlab-ci/Dockerfile
@@ -6,10 +6,10 @@ RUN dnf update -y \
     && dnf clean all
 
 ARG HOST_USER_ID=5555
-ENV HOST_USER_ID ${HOST_USER_ID}
+ENV HOST_USER_ID=${HOST_USER_ID}
 RUN useradd -u $HOST_USER_ID -ms /bin/bash user
 
 USER user
 WORKDIR /home/user
 
-ENV LANG C.UTF-8
+ENV LANG=C.UTF-8
